--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header id="masthead">
     <div class="container">
       <a href="index.html" id="logo">Your Name</a>
-      <nav>
+      <nav id="navnavnav">
         <a href="index.html">About</a>
         <a href="portfolio.html">Portfolio</a>
         <a href="contact.html">Contact</a>
@@ -24,7 +24,7 @@
     <section class="main-section">
       <h1>About Me</h1>
 
-      <img src="assets/images/cat.jpg" class="auth-image" alt="Your Name">
+      <img src="assets/images/cat.jpg" class="auth-image" id="auth-image" alt="Your Name">
 
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum. Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra. Vestibulum bibendum consectetur euismod. Proin commodo purus vitae sollicitudin consectetur.</p>
 
